@@ -294,6 +294,9 @@ Release 2.6.0 - UNRELEASED
     HDFS-6779. Add missing version subcommand for hdfs.
     (Sasaki Toru via wheat9)
 
+    HDFS-7195. Update user doc of secure mode about Datanodes don't require root
+    or jsvc. (cnauroth)
+
   OPTIMIZATIONS
 
     HDFS-6690. Deduplicate xattr names in memory. (wang)
